--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
   "version": "1.0.0",
   "description": "first project",
   "main": "index.js",
-  "bin" : {
-    "Brain-Games": "src/bin/brain-games.js",
+  "bin": {
     "brain-games": "dist/bin/brain-games.js"
   },
-  "files" : [
+  "files": [
     "dist"
-],
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
+    "prepublishOnly": "npm run build"
   },
   "author": "Svetlana Kim",
   "license": "ISC",
