--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "brain_games",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "first project",
   "main": "index.js",
   "bin": {
-    "brain-games": "dist/bin/brain-games.js"
+    "brain-games": "dist/bin/brain-games.js",
+    "brain-even": "dist/bin/brain-even.js"
   },
   "files": [
     "dist"
