--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-import": "^2.17.3"
   },
   "dependencies": {
+    "eslint-plugin-babel": "^5.3.0",
     "readline-sync": "^1.4.9"
   }
 }
