--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.17.3"
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-babel": "^5.3.0"
   },
   "dependencies": {
-    "eslint-plugin-babel": "^5.3.0",
     "readline-sync": "^1.4.9"
   }
 }
