--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "brain_games",
   "version": "1.0.1",
   "description": "first project",
-  "keywords": ["game",
-	"math",
-	"functions",
-	"calculator"
+  "keywords": [
+    "game",
+    "math",
+    "functions",
+    "calculator"
   ],
   "bin": {
     "brain-games": "dist/bin/brain-games.js",
